RESOLVED FIXED286980
[Grid] Incorrectly cached enclosing fragmented flow may cause crash
https://bugs.webkit.org/show_bug.cgi?id=286980
Summary [Grid] Incorrectly cached enclosing fragmented flow may cause crash
alan
Reported 2025-02-03 19:14:18 PST
Attachments
[fast-cq]Patch (2.71 KB, patch)
2025-02-03 19:17 PST, alan
no flags
alan
Comment 1 2025-02-03 19:17:17 PST
Created attachment 474131 [details] [fast-cq]Patch
EWS
Comment 2 2025-02-04 05:09:04 PST
Committed 289779@main (0891297fda32): <https://commits.webkit.org/289779@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 474131 [details].
EWS
Comment 3 2025-02-05 14:03:33 PST
Committed 289651.45@safari-7621-branch (7fe6ad5dbc57): <https://commits.webkit.org/289651.45@safari-7621-branch> Reviewed commits have been landed. Closing PR #2514 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.