[Grid] Incorrectly cached enclosing fragmented flow may cause crash https://bugs.webkit.org/show_bug.cgi?id=286980 <rdar://144091757>

Reviewed by Antti Koivisto.

locateEnclosingFragmentedFlow is supposed to be called with the intent of caching the result
as the valid enclosing fragmented flow. This function just wants to check if there's
an enclosing fragmented flow. Let's call enclosingFragmentedFlow instead.

* LayoutTests/fast/grid/grid-crash-inside-fragmentation-expected.txt: Added.
* LayoutTests/fast/grid/grid-crash-inside-fragmentation.html: Added.
* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::canCreateIntrinsicLogicalHeightsForRowSizingFirstPassCache const):

Canonical link: https://commits.webkit.org/289779@main